This is for a test all  codes are clear and it is currently 4:18pm am for this project it uses firebase in a project called control.All Values are in INteger except Solar which is string.

--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -33,7 +33,8 @@
         android:layout_below="@+id/textView"
         android:layout_centerInParent="true"
         android:layout_marginTop="35dp"
-        android:text="Air Conditioner : " />
+        android:text="Air Conditioner : "
+        />
 
     <Switch
         android:id="@+id/switch2"
@@ -45,7 +46,8 @@
         android:layout_marginTop="28dp"
         android:layout_marginLeft="13dp"
         android:layout_toRightOf="@+id/textView2"
-        android:text="OFF" />
+        android:text="OFF"
+        />
 
     <TextView
         android:id="@+id/textView3"
